<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">

<TableRow> 
 <TextView 

 android:text="@string/registration" 
 android:id="@+id/TextView01" 
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
 </TextView>
 
</TableRow>
  
<TableRow >
 <TextView 
 android:text="@string/space" 
 android:id="@+id/TextView01" 
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
 </TextView>  
</TableRow>

<TableRow>
 <TextView 
 android:text="@string/user_name_" 
 android:id="@+id/TextView01" 
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
 </TextView>
 
 <EditText
     android:id="@+id/txtUsername"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="" >

 </EditText>
</TableRow>


<TableRow>
 <TextView 
 android:text="@string/password_" 
 android:id="@+id/TextView02" 
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
 </TextView>

 <EditText
     android:id="@+id/txtPassword"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:password="true"
     android:text="" >

 </EditText>
</TableRow>

<TableRow>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
    
        <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
    
</TableRow>

</TableLayout>