<!-- <TableLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:layout_width="fill_parent" -->
<!--     android:layout_height="fill_parent" -->
<!--     android:stretchColumns="1"> -->
     
<!-- <TableRow>  -->
<!--  <TextView  -->
<!--  android:text="@string/user_name_"  -->
<!--  android:id="@+id/TextView01"  -->
<!--  android:layout_width="wrap_content"  -->
<!--  android:layout_height="wrap_content"> -->
<!--  </TextView> -->
 
<!--  <EditText -->
<!--      android:id="@+id/txtUsername" -->
<!--      android:layout_width="fill_parent" -->
<!--      android:layout_height="wrap_content" -->
<!--      android:text="" > -->

<!--  </EditText> -->
<!-- </TableRow> -->


<!-- <TableRow> -->
<!--  <TextView  -->
<!--  android:text="@string/password_"  -->
<!--  android:id="@+id/TextView02"  -->
<!--  android:layout_width="wrap_content"  -->
<!--  android:layout_height="wrap_content"> -->
<!--  </TextView> -->

<!--  <EditText -->
<!--      android:id="@+id/txtPassword" -->
<!--      android:layout_width="fill_parent" -->
<!--      android:layout_height="wrap_content" -->
<!--      android:password="true" -->
<!--      android:text="" > -->

<!--  </EditText> -->
<!-- </TableRow> -->


<!-- <TableRow> -->
<!--  <Button -->
<!--  android:text="@string/cancel"  -->
<!--  android:id="@+id/btnCancel"  -->
<!--  android:layout_width="fill_parent"  -->
<!--  android:layout_height="wrap_content"> -->
<!--  </Button> -->


<!--  <Button -->
<!--  android:text="@string/login"  -->
<!--  android:id="@+id/btnLogin"  -->
<!--  android:layout_width="fill_parent"  -->
<!--  android:layout_height="wrap_content"> -->
<!--  </Button> -->


<!-- </TableRow> -->


<!-- </TableLayout> -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">

<TableRow> 
 <TextView 

 android:text="@string/login_" 
 android:id="@+id/TextView01" 
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
 </TextView>
 
</TableRow>
  
<TableRow >
 <TextView 
 android:text="@string/space" 
 android:id="@+id/TextView01" 
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
 </TextView>  
</TableRow>

<TableRow>
 <TextView 
 android:text="@string/user_name_" 
 android:id="@+id/TextView01" 
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
 </TextView>
 
 <EditText
     android:id="@+id/txtUsername"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="" >

 </EditText>
</TableRow>


<TableRow>
 <TextView 
 android:text="@string/password_" 
 android:id="@+id/TextView02" 
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
 </TextView>

 <EditText
     android:id="@+id/txtPassword"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:password="true"
     android:text="" >

 </EditText>
</TableRow>

<TableRow>

	<TextView 
	 android:text="@string/space" 
	 android:id="@+id/TextView01" 
	 android:layout_width="wrap_content" 
	 android:layout_height="wrap_content">
	 </TextView>
 
<!--     <Button -->
<!--         android:id="@+id/btnRegister" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/register" /> -->
  
    
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter" />
    
</TableRow>

<TableRow>
 
</TableRow>

<TextView
    android:id="@+id/TextView02"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/space" />

<TextView
    android:id="@+id/ShowMsg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/space" />

</TableLayout>
